--- a/package.json
+++ b/package.json
@@ -6,16 +6,24 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "preinstall": "npx only-allow pnpm",
+    "ts:check": "tsc"
   },
   "dependencies": {
+    "@types/react": "~18.2.45",
     "expo": "~50.0.13",
     "expo-status-bar": "~1.11.1",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "0.73.5"
+    "react-native": "0.73.5",
+    "typescript": "^5.3.0",
+    "expo-auth-session": "~5.4.0",
+    "expo-crypto": "~12.8.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "tailwindcss": "3.3.2"
   },
   "private": true
 }
