--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "spotify-tk",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -11,15 +11,26 @@
     "ts:check": "tsc"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.1",
     "@types/react": "~18.2.45",
+    "@types/react-redux": "^7.1.33",
     "expo": "~50.0.13",
+    "expo-auth-session": "~5.4.0",
+    "expo-constants": "~15.4.5",
+    "expo-crypto": "~12.8.1",
+    "expo-linking": "~6.2.2",
+    "expo-router": "^3.4.8",
+    "expo-secure-store": "^12.8.1",
     "expo-status-bar": "~1.11.1",
-    "nativewind": "^2.0.11",
+    "nativewind": "^4.0.36",
     "react": "18.2.0",
     "react-native": "0.73.5",
-    "typescript": "^5.3.0",
-    "expo-auth-session": "~5.4.0",
-    "expo-crypto": "~12.8.1"
+    "react-native-reanimated": "~3.6.2",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
+    "react-redux": "^9.1.0",
+    "redux": "^5.0.1",
+    "typescript": "^5.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
