--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-query": "^3.39.3",
     "react-redux": "^9.1.0",
     "redux": "^5.0.1",
     "typescript": "^5.3.0"
