--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-router": "^3.4.8",
     "expo-secure-store": "^12.8.1",
     "expo-status-bar": "~1.11.1",
+    "expo-updates": "~0.24.12",
     "nativewind": "^4.0.36",
     "react": "18.2.0",
     "react-native": "0.73.5",
