update env for prod

--- a/eas.json
+++ b/eas.json
@@ -13,7 +13,10 @@
       "channel": "preview"
     },
     "production": {
-      "channel": "production"
+      "channel": "production",
+      "env": {
+        "NODE_ENV": "production"
+      }
     }
   },
   "submit": {
