--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 18.x
+          package-manager: pnpm
           cache: pnpm
 
       - name: Setup EAS
