--- a/.github/workflow/main.yml
+++ b/.github/workflow/main.yml
@@ -22,6 +22,9 @@ jobs:
           node-version: 18.x
           cache: yarn
 
+      - name: Install pnpm
+        run: npm install -g pnpm
+
       - name: Setup EAS
         uses: expo/expo-github-action@v8
         with:
@@ -29,7 +32,7 @@ jobs:
           token: ${{ secrets.EXPO_TOKEN }}
 
       - name: Install dependencies
-        run: yarn install
+        run: pnpm install
 
       - name: Publish update
         run: eas update --auto
