--- a/.github/workflow/main.yml
+++ b/.github/workflow/main.yml
@@ -22,6 +22,9 @@ jobs:
           node-version: 18.x
           cache: pnpm
 
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v3.0.0
+
       - name: Setup EAS
         uses: expo/expo-github-action@v8
         with:
@@ -29,7 +32,7 @@ jobs:
           token: ${{ secrets.EXPO_TOKEN }}
 
       - name: Install dependencies
-        run: npx pnpm install
+        run: pnpm install
 
       - name: Publish update
         run: eas update --auto
