--- a/.github/workflow/main.yml
+++ b/.github/workflow/main.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Install Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 21.x
+          node-version: 21
 
       - name: Install pnpm
         uses: pnpm/action-setup@v3
