--- a/package.json
+++ b/package.json
@@ -12,27 +12,28 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.1",
-    "@types/react": "~18.2.45",
+    "@types/react": "~18.2.79",
     "@types/react-redux": "^7.1.33",
-    "expo": "~50.0.13",
-    "expo-auth-session": "~5.4.0",
-    "expo-constants": "~15.4.5",
-    "expo-crypto": "~12.8.1",
-    "expo-linking": "~6.2.2",
-    "expo-router": "^3.4.8",
-    "expo-secure-store": "^12.8.1",
-    "expo-status-bar": "~1.11.1",
-    "expo-updates": "~0.24.12",
+    "expo": "~51.0.14",
+    "expo-auth-session": "~5.5.2",
+    "expo-constants": "~16.0.2",
+    "expo-crypto": "~13.0.2",
+    "expo-linking": "~6.3.1",
+    "expo-router": "^3.5.16",
+    "expo-secure-store": "^13.0.1",
+    "expo-status-bar": "~1.12.1",
+    "expo-updates": "~0.25.17",
     "nativewind": "^4.0.36",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
-    "react-native": "0.73.5",
-    "react-native-reanimated": "~3.6.2",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
+    "react-native": "0.74.2",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "~3.31.1",
     "react-query": "^3.39.3",
     "react-redux": "^9.1.0",
     "redux": "^5.0.1",
-    "typescript": "^5.3.0"
+    "typescript": "^5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
